System update causes build failure in atk headers.
Categories
(Core :: Disability Access APIs, defect)
Tracking
()
People
(Reporter: emilio, Assigned: emilio)
References
(Blocks 1 open bug)
Details
Attachments
(2 files)
|
48 bytes,
text/x-phabricator-request
|
Details | Review | |
|
48 bytes,
text/x-phabricator-request
|
jcristau
:
approval-mozilla-esr78+
|
Details | Review |
0:01.98 In file included from /home/emilio/src/moz/gecko-3/accessible/atk/nsMaiInterfaceHyperlinkImpl.cpp:7:
0:01.99 In file included from /home/emilio/src/moz/gecko-3/accessible/atk/InterfaceInitFuncs.h:10:
0:01.99 In file included from /home/emilio/src/moz/gecko-3/obj-debug/dist/system_wrappers/atk/atk.h:3:
0:01.99 In file included from /home/emilio/src/moz/gecko-3/other-licenses/atk-1.0/atk/atk.h:31:
0:01.99 In file included from /home/emilio/src/moz/gecko-3/other-licenses/atk-1.0/atk/atkobject.h:27:
0:01.99 In file included from /home/emilio/src/moz/gecko-3/obj-debug/dist/system_wrappers/glib-object.h:3:
0:01.99 In file included from /usr/include/glib-2.0/glib-object.h:22:
0:01.99 In file included from /usr/include/glib-2.0/gobject/gbinding.h:28:
0:01.99 In file included from /home/emilio/src/moz/gecko-3/obj-debug/dist/system_wrappers/glib.h:3:
0:01.99 In file included from /usr/include/glib-2.0/glib.h:30:
0:01.99 In file included from /usr/include/glib-2.0/glib/galloca.h:32:
0:01.99 In file included from /usr/include/glib-2.0/glib/gtypes.h:32:
0:01.99 In file included from /home/emilio/src/moz/gecko-3/obj-debug/dist/system_wrappers/glibconfig.h:3:
0:01.99 In file included from /usr/lib64/glib-2.0/include/glibconfig.h:9:
0:01.99 In file included from /usr/include/glib-2.0/glib/gmacros.h:241:
0:01.99 In file included from /home/emilio/src/moz/gecko-3/obj-debug/dist/stl_wrappers/type_traits:52:
0:01.99 In file included from /home/emilio/src/moz/gecko-3/obj-debug/dist/system_wrappers/type_traits:3:
0:01.99 /usr/lib/gcc/x86_64-redhat-linux/10/../../../../include/c++/10/type_traits:56:3: error: templates must have C++ linkage
0:01.99 template<typename _Tp, _Tp __v>
0:01.99 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
0:01.99 /home/emilio/src/moz/gecko-3/other-licenses/atk-1.0/atk/atkobject.h:24:1: note: extern "C" language linkage specification begins here
0:01.99 extern "C" {
0:01.99 ^
| Assignee | ||
Comment 1•4 years ago
|
||
Upstream atk headers don't suffer from this issue.
| Assignee | ||
Comment 2•4 years ago
|
||
They include system headers inside extern "C", which seems wrong and
causes the issue. This is the minimal patch.
| Assignee | ||
Updated•4 years ago
|
Comment 4•4 years ago
|
||
| bugherder | ||
Comment 5•4 years ago
|
||
FWIW it looks like https://gitlab.gnome.org/GNOME/glib/commit/51003d409bb4b6c9a8540f70b92f8045abc4f0c9 added c++ to glib/gmacros.h in GLib 2.67.3. We may want to backport this to esr78 so this is fixed as distros update to glib 2.68?
| Assignee | ||
Comment 6•4 years ago
|
||
(In reply to Julien Cristau [:jcristau] from comment #5)
FWIW it looks like https://gitlab.gnome.org/GNOME/glib/commit/51003d409bb4b6c9a8540f70b92f8045abc4f0c9 added c++ to
glib/gmacros.hin GLib 2.67.3. We may want to backport this to esr78 so this is fixed as distros update to glib 2.68?
Thanks for finding that! Yeah, probably worth uplifting.
| Assignee | ||
Comment 7•4 years ago
|
||
Comment on attachment 9203264 [details]
Bug 1692893 - Minimal patch: Workaround atk extern "C" issue. r=Jamie,sg
ESR Uplift Approval Request
- If this is not a sec:{high,crit} bug, please state case for ESR consideration: Build fix with newer glib
- User impact if declined: none
- Fix Landed on Version: 86
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Very simple build fix.
- String or UUID changes made by this patch: none
| Assignee | ||
Updated•4 years ago
|
| Assignee | ||
Updated•4 years ago
|
Updated•4 years ago
|
Comment 8•4 years ago
|
||
Comment on attachment 9203264 [details]
Bug 1692893 - Minimal patch: Workaround atk extern "C" issue. r=Jamie,sg
build fix, approved for 78.9esr
Comment 9•4 years ago
|
||
| bugherder uplift | ||
Description
•