Bug 1692893 - Minimal patch: Workaround atk extern "C" issue. r=Jamie

They include system headers inside extern "C", which seems wrong and
causes the issue. This is the minimal patch.

Differential Revision: https://phabricator.services.mozilla.com/D105217